[gd_scene load_steps=5 format=3 uid="uid://bp2w0mhwpqoq7"]

[ext_resource type="Theme" uid="uid://7qtjarwklgd2" path="res://ui/Themes/ui_theme.tres" id="1_0uyxq"]
[ext_resource type="Script" uid="uid://bcaacmka808e2" path="res://ui/gameplay_ui/shop_item_modifyable.gd" id="1_7vfys"]
[ext_resource type="Texture2D" uid="uid://df3vmvvomkt0j" path="res://Assets/Icons/HookIcon.png" id="2_0uyxq"]
[ext_resource type="PackedScene" uid="uid://b2wuithykkaes" path="res://ui/click_sound_player.tscn" id="3_8m76c"]

[node name="ShopItemModifyable" type="VBoxContainer"]
offset_right = 401.0
offset_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_0uyxq")
script = ExtResource("1_7vfys")

[node name="NameContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="ItemName" type="Label" parent="NameContainer"]
layout_mode = 2
text = "Upgrade Text"
horizontal_alignment = 1

[node name="ContentContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="ContentEstate" type="HBoxContainer" parent="ContentContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="ContentContainer/ContentEstate"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_0uyxq")
expand_mode = 2

[node name="BuyAndPrice" type="VBoxContainer" parent="ContentContainer/ContentEstate"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="ContentContainer/ContentEstate/BuyAndPrice"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="ItemPrice" type="Label" parent="ContentContainer/ContentEstate/BuyAndPrice/PanelContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="ContentContainer/ContentEstate/BuyAndPrice"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Buy"

[node name="PanelAdjustable" type="VBoxContainer" parent="ContentContainer/ContentEstate"]
layout_mode = 2

[node name="TextContainer" type="PanelContainer" parent="ContentContainer/ContentEstate/PanelAdjustable"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextCount" type="Label" parent="ContentContainer/ContentEstate/PanelAdjustable/TextContainer"]
layout_mode = 2
text = "0/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsBox" type="HBoxContainer" parent="ContentContainer/ContentEstate/PanelAdjustable"]
layout_mode = 2

[node name="ButtonAdd" type="Button" parent="ContentContainer/ContentEstate/PanelAdjustable/ButtonsBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="ButtonRemove" type="Button" parent="ContentContainer/ContentEstate/PanelAdjustable/ButtonsBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="ClickSoundPlayer" parent="." instance=ExtResource("3_8m76c")]
